--- a/internal/views/products.html
+++ b/internal/views/products.html
@@ -81,7 +81,7 @@
     <div class="card-body">
       <h3 class="card-title"><a href="/product/{{$p.Slug}}">{{$p.Name}}</a></h3>
       <div class="card-meta">{{$p.Category}}</div>
-      <div class="price-row"><span class="price">${{printf "%.0f" $p.BasePrice}}</span></div>
+      <div class="price-row"><span class="price">${{formatPrice $p.BasePrice}}</span></div>
       <div class="actions">
         <a href="/product/{{$p.Slug}}" class="btn-secondary btn-full">Ver detalles ›</a>
       </div>
